streamsynchronizer: Implement grouping of streams via the group-id

https://bugzilla.gnome.org/show_bug.cgi?id=704427
https://bugzilla.gnome.org/show_bug.cgi?id=704408